reviews/reviewsv1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: reviews-v1
  name: reviews-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews-v1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: reviews-v1
    spec:
      containers:
      - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
        name: hello-app
        resources: {}
status: {}
