reviews/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: reviews-service
spec: 
 type: ClusterIP
 selector:
  app: details
  ports:
  - port: 80
    targetPort: 80
