reviews/servicev1.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: reviews-v1
  name: reviews-v1
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-app-1
status:
  loadBalancer: {}
