reviews/servicev2.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: reviews-v2
  name: reviews-v2
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: reviews-v2
status:
  loadBalancer: {}
