reviews/servicev3.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: reviews-v3
  name: reviews-v3
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: reviews-v3
status:
  loadBalancer: {}
