reviews/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-basic-routing
  annotations:
    kubernetes.io/ingress.class: "gce"  
spec: 
  defaultBackend:
    service:
      name: reviews-v1
      port:
       number: 8080
  rules:
    - http:
        paths:           
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: reviews-v1
                port: 
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: reviews-v2
                port: 
                  number: 8080
          - path: /v3
            pathType: Prefix
            backend:
              service:
                name: reviews-v3
                port: 
                  number: 8080
